# ChangeLog for media-video/coriander
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/coriander/ChangeLog,v 1.15 2008/01/30 18:02:39 stefaan Exp $

  30 Jan 2008; Stefaan De Roeck <stefaan@gentoo.org>
  coriander-2.0.0_rc6.ebuild:
  Fix bug #205578: dev-util/pkgconfig is required to build

  26 Jan 2008; Michael Sterrett <mr_bones_@gentoo.org>
  coriander-2.0.0_rc6.ebuild:
  add missing ffmpeg to IUSE

*coriander-2.0.0_rc6 (24 Jan 2008)

  24 Jan 2008; Stefaan De Roeck <stefaan@gentoo.org>
  +coriander-2.0.0_rc6.ebuild:
  Bumping to newer version, supporting media-libs/libdc1394-2.0.0

  14 Jan 2008; Stefaan De Roeck <stefaan@gentoo.org> metadata.xml:
  Assigning this package to stefaan, updating metadata.xml

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing seemant from metadata.xml as per #202469. Assigning to
  maintainer-needed.

  27 Nov 2007; Matthias Schwarzott <zzam@gentoo.org>
  coriander-2.0.0_pre6.ebuild, coriander-2.0.0_rc1-r1.ebuild:
  Fixed quoting.

  21 Dec 2006; Saleem Abdulrasool <compnerd@gentoo.org>
  -coriander-1.0.0.ebuild:
  gnome-1.x removal

*coriander-2.0.0_rc1-r1 (07 Dec 2006)

  07 Dec 2006; Daniel Drake <dsd@gentoo.org>
  +files/coriander-2.0.0_rc1-ffmpeg-configure.patch,
  +coriander-2.0.0_rc1-r1.ebuild:
  Fix ffmpeg configure-time behaviour thanks to Gad Kadosh in bug #133143

*coriander-2.0.0_rc1 (15 Sep 2006)

  15 Sep 2006; Daniel Drake <dsd@gentoo.org> +coriander-2.0.0_rc1.ebuild:
  Version bump

*coriander-2.0.0_pre6 (08 Jun 2006)

  08 Jun 2006; Seemant Kulleen <seemant@gentoo.org>
  -coriander-2.0.0_pre4.ebuild, coriander-2.0.0_pre5.ebuild,
  +coriander-2.0.0_pre6.ebuild:
  version bump and dep string fix

*coriander-2.0.0_pre5 (20 Mar 2006)

  20 Mar 2006; Seemant Kulleen <seemant@gentoo.org>
  +coriander-2.0.0_pre5.ebuild:
  version bump to latest upstream release and will only work with the pre6
  series from libdc1394
