@@ -13,14 +13,14 @@ EBUILD coriander-2.0.0_rc1-r1.ebuild 1124 RMD160 64ac86e41f72fc61c9fdc85adf43935
 MD5 9ec1707cce90dded547b7778e804907b coriander-2.0.0_rc1-r1.ebuild 1124
 RMD160 64ac86e41f72fc61c9fdc85adf43935cc348d654 coriander-2.0.0_rc1-r1.ebuild 1124
 SHA256 6960921ce0ed684c54f935e7945e2730ad1cd258267aa05652d1510865c1a8c5 coriander-2.0.0_rc1-r1.ebuild 1124
-EBUILD coriander-2.0.0_rc6.ebuild 1176 RMD160 0b48d9eac910bf3089e55eabe93c09a17cca19e3 SHA1 b1381c7005017cd7c2520f2b306a1df73ed7f254 SHA256 fe79a8c749ff0e902c2243b506175194646e8cee60e899f4f9f9c89be87d370b
-MD5 13602845fa0a06edd7b9c2da15d2f5e9 coriander-2.0.0_rc6.ebuild 1176
-RMD160 0b48d9eac910bf3089e55eabe93c09a17cca19e3 coriander-2.0.0_rc6.ebuild 1176
-SHA256 fe79a8c749ff0e902c2243b506175194646e8cee60e899f4f9f9c89be87d370b coriander-2.0.0_rc6.ebuild 1176
-MISC ChangeLog 3739 RMD160 7e056211d77d9e2c3f2517fd65033858cd60d2b6 SHA1 83968b2e31c10c2d8a09bef41bdee8d3bc576ca7 SHA256 10aacd08ca231fab1151734e19b9688dbcaf18a97d06ab324576899981dcd1fe
-MD5 ffe3c4854005a4551eac2a6e0a644dab ChangeLog 3739
-RMD160 7e056211d77d9e2c3f2517fd65033858cd60d2b6 ChangeLog 3739
-SHA256 10aacd08ca231fab1151734e19b9688dbcaf18a97d06ab324576899981dcd1fe ChangeLog 3739
+EBUILD coriander-2.0.0_rc6.ebuild 1224 RMD160 941000a1cd82d8e9f66370d78adf96207e3fd970 SHA1 f8f1d3c08b4d39faabfc445ff381691ffe682e09 SHA256 adf852158255e378eac1bb46cd5380e9b58804000241529ca558440b4ab28201
+MD5 17eda8c4593ecad27d30b1718633a0a5 coriander-2.0.0_rc6.ebuild 1224
+RMD160 941000a1cd82d8e9f66370d78adf96207e3fd970 coriander-2.0.0_rc6.ebuild 1224
+SHA256 adf852158255e378eac1bb46cd5380e9b58804000241529ca558440b4ab28201 coriander-2.0.0_rc6.ebuild 1224
+MISC ChangeLog 3902 RMD160 4c742eca3a9f230f4e6f4ab7cd2882ff9c58bd10 SHA1 93a92218830cb5ce5e23b610f69d9c567c2575e7 SHA256 01cf9d4eb2a17034f87827654b0719c5c81e1058eedaeac857c0a70cec87eb9f
+MD5 a3f040ab1105e64dd52e7d94bcbcef1f ChangeLog 3902
+RMD160 4c742eca3a9f230f4e6f4ab7cd2882ff9c58bd10 ChangeLog 3902
+SHA256 01cf9d4eb2a17034f87827654b0719c5c81e1058eedaeac857c0a70cec87eb9f ChangeLog 3902
 MISC metadata.xml 258 RMD160 f0b32b978440c44574d47574310f99e93b6044b2 SHA1 3c4a2a54aee38642789e58e3e3e82aaa6835a7a3 SHA256 e240bb6cb4b14d10ab22d4a49be547aeef993e6c9b0ea3ee4f751dcfe320cefd
 MD5 05b47b41c37dcb9c959dda69e6ec3d4d metadata.xml 258
 RMD160 f0b32b978440c44574d47574310f99e93b6044b2 metadata.xml 258
