@@ -1,6 +1,10 @@
 # ChangeLog for media-video/coriander
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/coriander/ChangeLog,v 1.15 2008/01/30 18:02:39 stefaan Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/coriander/ChangeLog,v 1.16 2008/01/30 18:05:13 stefaan Exp $
+
+  30 Jan 2008; Stefaan De Roeck <stefaan@gentoo.org>
+  coriander-2.0.0_rc6.ebuild:
+  No ffmpeg support for now, disabled by upstream because it is in development
 
   30 Jan 2008; Stefaan De Roeck <stefaan@gentoo.org>
   coriander-2.0.0_rc6.ebuild:
